ADD: form and galery layout

--- a/public/index.html
+++ b/public/index.html
@@ -15,3 +15,11 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
+<style>
+  body{
+    position: relative;
+    width: 1728px;
+    height: 1117px;
+    background: #F2F2F2;
+  }
+</style>
